2011-02-26  James Simonsen  <simonjam@chromium.org>

Reviewed by Tony Gentilcore.

        [Web Timing] loadEvent timing should refer to first load event if there are many
        https://bugs.webkit.org/show_bug.cgi?id=55201

        * fast/dom/script-tests/webtiming-document-open.js:
        (testTimingWithDocumentOpen): Fire via setTimeout to match w3c test and reveal loadEventEnd.
        (finishTest): Fire via setTimeout to match w3c test.
2011-02-26  James Simonsen  <simonjam@chromium.org>

        Reviewed by Tony Gentilcore.

        [Web Timing] loadEvent timing should refer to first load event if there are many
        https://bugs.webkit.org/show_bug.cgi?id=55201

        Test: fast/dom/webtiming-document-open.html

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::dispatchLoadEvent):

Canonical link: https://commits.webkit.org/69693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79776 268f45cc-cd09-0410-ab3c-d52691b4dbfc